examples/test/testpolicy12405.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12405
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key33: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value4
      podSelector:
        matchLabels:
          key0: value47
          key5: value11
          key20: value30
